fix:_burger-and-cross-align

--- a/src/css/layout/menu.css
+++ b/src/css/layout/menu.css
@@ -83,9 +83,10 @@
 
 /* #region CROSS BUTTON */
 .mob-menu-closing-cross-btn {
+
   position: absolute;
-  top: 20px;
-  right: 0;
+  top: 10px;
+  right: 15px;
 
   display: flex;
   align-items: center;
